# app/models/model/model.go
@@ -1,0 +1,5 @@
+package model
+
+type ErrorRequest struct {
+	Error string `json:"error" example:"error"`
+}
