# database/User_DB/User_Schema.go
@@ -11,4 +11,8 @@ type UserInfo struct {
 	Home_id      string    `json:"Home_id"`
 	Registertime time.Time `json:"Registertime" example:"2025-03-23T15:04:05Z"`
 	Birthdaytime time.Time `json:"Birthdaytime" example:"2025-03-23T15:04:05Z"`
+	Token        string    `json:"Token"`
+	Platform     string    `json:"Platform"`
+	Permission   int       `json"Permission"`
+	Session_id   string    `json:"Session_id"`
 }
